[package]
name = "gd-rehearse-defs"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
godot = { git = "https://github.com/StatisMike/gdext", branch = "hotfix/CI_remove_dir_all" }
paste = "1.0.14"

[package.metadata.docs.rs]
license-file = "../License.txt"