[package]
name = "gd-rehearse-defs"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
godot = { version = "0.1.*" }
paste = { version = "^1.0.14" }

[dev-dependencies]
gd-rehearse = { path = "../gd-rehearse" }

[package.metadata.docs.rs]
license-file = "../License.txt"