[package]
name = "gd-rehearse-macros"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
proc-macro = true

[dev-dependencies]
gd-rehearse = { path="../gd-rehearse" }
godot = { git = "https://github.com/godot-rust/gdext", branch = "feature/output-dir" }

[dependencies]
gd-rehearse-defs = { path="../gd-rehearse-defs" }
proc-macro2 = "1.*"
quote = "1.*"
venial = "^0.5"

[package.metadata.docs.rs]
license-file = "../License.txt"