[package]
name = "gd-rehearse"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
keywords = ["gamedev", "godot", "engine", "integration","test"]
categories = ["game-engines", "graphics", "test"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gd-rehearse-macros = { path = "../gd-rehearse-macros"}
gd-rehearse-defs = { path = "../gd-rehearse-defs"}
# For direct link in documentation
godot = { git = "https://github.com/godot-rust/gdext", branch = "feature/output-dir" }

[package.metadata.docs.rs]
license-file = "../License.txt"