[package]
name = "godot-test"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
keywords = ["gamedev", "godot", "engine", "integration","test"]
categories = ["game-engines", "graphics", "test"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
godot-test_macros = { path = "../godot-test_macros"}
godot-test_defs = { path = "../godot-test_defs"}

[package.metadata.docs.rs]
license-file = "../License.txt"