[package]
name = "godot-test_macros"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
proc-macro = true

[dev-dependencies]
godot-test = { path="../godot-test" }
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }

[dependencies]
godot-test_defs = { path="../godot-test_defs" }
proc-macro2 = "1.0.63"
quote = "1.0.29"
venial = "0.5"

[package.metadata.docs.rs]
license-file = "../License.txt"