[package]
name = "tests"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
godot = { version = "^0.2.4" }
gd-rehearse = { path = "../../gd-rehearse" }

[package.metadata.docs.rs]
license-file = "../License.txt"